# sport-index

./: .gitignore  README.md  pyproject.toml
examples/: f1_example.py  football_example.py
scripts/: collect_samples.py
src/sportindex/: __init__.py  client.py  client_old.py
src/sportindex/core/: __init__.py  base_client.py  base_provider.py  base_scraper.py  client.py  constants.py  endpoints.py  exceptions.py  fetcher.py  provider.py
src/sportindex/core/domain/: __init__.py  base.py  competition.py  core.py  event.py  index.py  leaderboard.py  participant.py  season.py  static.py  values.py  venue.py
src/sportindex/core/models/: category.py  core.py  event.py  incident.py  lineup.py  period.py  player.py  referee.py  standings.py  team.py
src/sportindex/core/provider/: __init__.py  endpoints.py  exceptions.py  fetcher.py  main.py  parsers.py
src/sportindex/core/sofascore/: __init__.py
src/sportindex/core/transformers/: __init__.py  category.py  common.py  competition.py  event.py  lineups.py  manager.py  periods.py  player.py  ranking.py  referee.py  scores.py  search.py  standings.py  team.py  transfer.py  venue.py
src/sportindex/f1/: __init__.py  client.py  provider.py
src/sportindex/f1/espn/: __init__.py  endpoints.py  provider.py
src/sportindex/football/: __init__.py  client.py  provider.py
src/sportindex/football/onefootball/: __init__.py  endpoints.py  provider.py
src/sportindex/legacy/: _provider_experimental.py  protocol_client.py
src/sportindex/legacy/espn/: __init__.py  client.py  (+2 more)
src/sportindex/utils/: __init__.py  nested.py
(+82 files in other folders)
