[project]
name = "sport-index"
version = "0.1.0"
description = "Unified clients for sports data providers"
authors = [
    {name = "JolanDUBOIS", email = "jolan.developer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "cloudscraper (>=1.2.71,<2.0.0)"
]

[tool.poetry]
packages = [{ include = "sportindex", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
collect-samples = "scripts.collect_samples:main"
